added boone scales into experience section

--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
           </p>
           <br>
           <p>
-            I thrive in problem-solving environments and enjoy tackling challenges through technology, 
-            whether building responsive web applications, deploying AI solutions, or exploring the 
-            intersection of technology and business. I'm always looking to connect, share ideas, and 
-            explore opportunities in software development.
+            I also founded Boone Scales, a web and AI solutions agency helping small businesses establish 
+            their online presence and automate workflows. I thrive in problem-solving environments and 
+            enjoy tackling challenges through technology, whether building responsive web applications, 
+            deploying AI solutions, or exploring the intersection of technology and business. I'm always 
+            looking to connect, share ideas, and explore opportunities in software development.
           </p>
         </div>
       </div>
@@ -143,6 +144,34 @@
           <li>Integrated blockchain and Web3 technologies to enable secure, decentralized features for insurance workflows.</li>
           <li>Developed and deployed AI agents to automate insurance processes, improving efficiency and client experience.</li>
           <li>Collaborated on feature development, testing, and optimization, leveraging Python, SQL, and web technologies to enhance platform performance and reliability.</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="experience-card">
+      <div class="experience-header" onclick="toggleDetails(this)">
+        <div class="header-main">
+          <h3>Boone Scales – Web Development & AI Automation</h3>
+          <p class="experience-role">Founder & Lead Developer</p>
+          <p class="experience-location">
+            <a href="https://boonescales.com" target="_blank" onclick="event.stopPropagation()" style="color: inherit; text-decoration: underline;">
+              boonescales.com
+            </a>
+          </p>
+        </div>
+        <div class="dropdown-arrow">
+          <i class="fas fa-chevron-down"></i>
+        </div>
+      </div>
+      <div class="experience-content">
+        <span class="experience-date">June 2024 - Present</span>
+        <ul class="experience-details">
+          <li>Founded a digital agency specializing in custom websites and AI-powered automation for small businesses.</li>
+          <li>Designed and launched multiple client websites (e.g., Homeworth Fabrication & Machines) using Next.js, React, and Tailwind CSS.</li>
+          <li>Developed AI workflows and intelligent agents to streamline business operations and customer interactions.</li>
+          <li>Built responsive, SEO-optimized, and scalable solutions to enhance client visibility and performance.</li>
+          <li>Managed end-to-end product lifecycle — from client onboarding to deployment and hosting.</li>
+          <li>Technologies: Next.js, React, Tailwind CSS, Node.js, TypeScript, Python, AI APIs</li>
         </ul>
       </div>
     </div>
