--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <p class="education-major-minor">Major: Computer Science | Minor: Finance</p>
       <ul class="education-details">
         <li>Dean's List: Fall 2022 - Present</li>
-        <li>Relevant Coursework: Algorithm Design & Analysis, Software Engineering Tools, Data Structures</li>
+        <li>Relevant Coursework: Algorithm Design & Analysis, Operating Systems, Computer Architecture, Parallel Computing, Software Engineering Tools, Data Structures</li>
       </ul>
     </div>
   </section>
